--- a/journalmall.css
+++ b/journalmall.css
@@ -67,7 +67,7 @@ form {
 }
 
 .submit-button {
-  margin-left: 20rem;
+  margin-left: 25%;
   width: 50%;
   padding: 0.75rem;
   background: lightgreen;
